changes to make sure the page displays properly on small screens

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,8 @@ header {
 }
 
 section {
-    height: 100vh;
+    min-height: 100svh;
+    margin: 0;
 }
 
 p {
